added action page and modified frontend

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 
 
 <div class="container" id="cont">
+  <h2>Validation Form</h2>
+  <hr>
   <span class="rtag">*</span> means Required field
   <br><br>
-  <form>
+  <form action="action.html">
 
   <div class="form-group">
     <label for="exampleInputEmail1">Name</label><span class="rtag">*</span> 
@@ -119,7 +121,7 @@
   </div>
 
   
-  
+ <button type="Submit" id="submitbtn" style="display: none;"></button>
 </form>
 <br>
 <button class="btn btn-primary" onclick="wholefv()">Submit</button>
