prevented form submission by enter button

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <hr>
   <span class="rtag">*</span> means Required field
   <br><br>
-  <form action="action.html">
+  <form action="action.html" onkeydown="return event.key != 'Enter';">
 
   <div class="form-group">
     <label for="exampleInputEmail1">Name</label><span class="rtag">*</span> 
